--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,25 +127,30 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/TutorialRoom
-MRUItem2=/Game/Levels/OtherRoom
-MRUItem3=/Game/Levels/BasicRoom
+MRUItem0=/Game/Levels/StartLevel
+MRUItem1=/Game/Levels/BasicRoom
+MRUItem2=/Game/Levels/MasterLevel
+MRUItem3=/Game/Levels/LoseLevel
 MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/InGameScreen
-MRUItem6=/Game/InGame/InGame
-MRUItem7=/Game/InGameScreen
-MRUItem8=/Game/StartScreen
-MRUItem9=/Game/StarterContent/Maps/Minimal_Default
+MRUItem5=/Game/Levels/OtherRoom
+MRUItem6=/Game/Levels/TutorialRoom
+MRUItem7=/Game/Levels/InGameScreen
+MRUItem8=/Game/InGame/InGame
+MRUItem9=/Game/InGameScreen
+MRUItem10=/Game/StartScreen
+MRUItem11=/Game/StarterContent/Maps/Minimal_Default
 
 [EditorStartup]
-LastLevel=/Game/Levels/MasterLevel
+LastLevel=/Game/Levels/StartLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/Door.Door
-OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+CleanShutdown=False
 OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
+OpenAssetsAtExit=/Game/InGame/B_PlayerBullet.B_PlayerBullet
+OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/InGame/Enemey.Enemey
+OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+OpenAssetsAtExit=/Game/InGame/Enemy_Projectile.Enemy_Projectile
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -695,6 +700,73 @@ MasterLevel_C.Input=True
 MasterLevel_C.HLOD=True
 MasterLevel_C.WorldPartition=True
 MasterLevel_C.Events=True
+Enemey_C.TransformCommon=True
+Enemey_C.Rendering=True
+Enemey_C.Replication=True
+Enemey_C.Collision=True
+Enemey_C.HLOD=True
+Enemey_C.Input=True
+Enemey_C.Actor=True
+Enemey_C.Default=True
+Enemey_C.Tick=True
+Enemey_C.WorldPartition=True
+Enemey_C.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+Enemy_Projectile_C.Default=True
+Enemy_Projectile_C.Tick=True
+Enemy_Projectile_C.Replication=True
+Enemy_Projectile_C.Rendering=True
+Enemy_Projectile_C.Collision=True
+Enemy_Projectile_C.Actor=True
+Enemy_Projectile_C.Input=True
+Enemy_Projectile_C.HLOD=True
+Enemy_Projectile_C.WorldPartition=True
+Enemy_Projectile_C.Events=True
+MyGameModeBase_C.TransformCommon=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.HLOD=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.HLOD=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1720,7 +1792,7 @@ StaticMeshComponent=
 B_Room_C=BlockingVolume.Collision.Collision,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=BlockingVolume.Collision.Collision,
 B_PlayerCharacter_C=BlockingVolume.Collision.Collision,
 Door_C=BlockingVolume.Collision.Collision,
 PropertyWrapper=BlockingVolume.Collision.Collision,
@@ -1732,6 +1804,11 @@ BillboardComponent=BlockingVolume.Collision.Collision,
 ChildActorComponent=BlockingVolume.Collision.Collision,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
+Enemey_C=BlockingVolume.Collision.Collision,
+CameraComponent=BlockingVolume.Collision.Collision,
+Enemy_Projectile_C=BlockingVolume.Collision.Collision,
+MyGameModeBase_C=BlockingVolume.Collision.Collision,
+ParticleEventManager=BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1791,22 +1868,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/TutorialRoom
-MRUItem2=/Game/Levels/OtherRoom
-MRUItem3=/Game/Levels/BasicRoom
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/InGameScreen
-MRUItem6=/Game/InGame/B_PlayerCharacter
-MRUItem7=/Game/InGame/B_Room
-MRUItem8=/Game/InGame/Door
-MRUItem9=/Game/InGame/B_PlayerBullet
-MRUItem10=/Game/GUI/MainMenu/MainMenu
-MRUItem11=/Game/InGame/MyPlayerController
-MRUItem12=/Game/InGameScreen
-MRUItem13=/Game/MyGameModeBase
-MRUItem14=/Game/StartScreen
-MRUItem15=/Game/MyPlayerController
+MRUItem0=/Game/InGame/Enemy_Projectile
+MRUItem1=/Game/InGame/B_Room
+MRUItem2=/Game/InGame/Door
+MRUItem3=/Game/Levels/StartLevel
+MRUItem4=/Game/Levels/BasicRoom
+MRUItem5=/Game/Levels/MasterLevel
+MRUItem6=/Game/Levels/LoseLevel
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/OtherRoom
+MRUItem9=/Engine/BasicShapes/snak
+MRUItem10=/Engine/BasicShapes/Plane
+MRUItem11=/Engine/BasicShapes/Snek
+MRUItem12=/Game/InGame/Enemey
+MRUItem13=/Game/GUI/MainMenu/MainMenu
+MRUItem14=/Game/InGame/B_PlayerBullet
+MRUItem15=/Game/InGame/MyGameModeBase
+MRUItem16=/Game/InGame/MyPlayerController
+MRUItem17=/Game/InGame/B_PlayerCharacter
+MRUItem18=/Game/Levels/TutorialRoom
+MRUItem19=/Game/Levels/InGameScreen
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1861,6 +1942,10 @@ GraphEditorQuickJumps=()
 /Game/InGame/B_Room.B_Room=1
 /Game/Levels/MasterLevel.MasterLevel:PersistentLevel.MasterLevel=1
 /Game/InGame/Door.Door=1
+/Game/InGame/MyGameModeBase.MyGameModeBase=1
+/Engine/BasicShapes/Plane.Plane=1
+/Engine/BasicShapes/Snek.Snek=1
+/Engine/BasicShapes/snak.snak=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1977,8 +2062,8 @@ K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -2063,6 +2148,15 @@ BrushComponent="\"Object\" "
 ChildActorComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 Actor="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
+MaterialExpression="\"Object\" "
+AssetViewerSettings="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2072,12 +2166,13 @@ StaticMeshComponent.Physics=True
 B_Room_C.Actor=False
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
+RecentlyPlaced=/Game/InGame/Enemey.Enemey;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/InGame/Door.Door;
 RecentlyPlaced=/Game/InGame/B_Room.B_Room;
-RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -2195,4 +2290,69 @@ RemoveLevelWarning=False
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
